fix / SCROLLBAR_WIDTH returned value
when on an iOS device and the scrollbar pseudo element was present with
an explicit width value, (e.g: `::-webkit-scrollbar {width: 5px}`) the
SCROLLBAR_WIDTH variable will hold `5` instead of `0` (which is the value
we expect in order to prevent the custom-scrollbars), so, as a result the
custom-scrollbars were present, but they sould not.

to fix this, we are adding the `::-webkit-scrollbar` pseudo element on
the temporal element we use to measure the scrollbar-width setting its
`width` property to the `initial` value. This will return `0` on iOS
devices.

--- a/gemini-scrollbar.css
+++ b/gemini-scrollbar.css
@@ -1,5 +1,16 @@
+/* @helper: used to measure the scrollbar width on a temporal element */
+.gm-test {
+  visibility: hidden;
+  width: 100px;
+  overflow: scroll;
+  -ms-overflow-style: scrollbar;
+}
+.gm-test::-webkit-scrollbar {
+  width: initial;
+}
+
 /* disable selection while dragging */
-body.gm-scrollbar-disable-selection {
+.gm-scrollbar-disable-selection {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
